# neug

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE.txt  README.md  dev_and_test.md  neug-config.in.cmake
.devcontainer/: devcontainer.json
.github/: issue-triage-config.yml
.github/scripts/: triage_issue.py
.github/workflows/: benchmark.yml  build-and-test-common.yml  build-extensions.yml  build-nightly-wheel.yml  (+13 more)
benchmark/: bench_gds_algorithms.py  bench_gds_path.py  bench_gds_performance.py  bench_wcc_comparison.py
cmake/: BuildArrowAsThirdParty.cmake  BuildBRPCAsThirdParty.cmake  BuildGlogAsThirdParty.cmake  neug_symbol_visibility.cmake
docker/: README.md  manifest.sh  neug-manylinux.Dockerfile  neug-release.Dockerfile
extension/: CMakeLists.txt
extension/gds/: CMakeLists.txt  README.md
extension/gds/docs/: gds-shortest-path-spec.md
extension/gds/include/: bfs.h  bfs_function.h  cdlp.h  gds_algo_function_collection.h  gds_param_parser.h  k_core_function.h  kcore.h  label_propagation_function.h  lcc.h  lcc_function.h  leiden.h  leiden_function.h  louvain.h  page_rank.h  page_rank_function.h  project_graph_function.h  sssp.h  sssp_function.h  wcc.h  wcc_function.h
extension/gds/include/impl/: bfs_impl.h  bfs_pred_impl.h  cdlp_impl.h  cdlp_pred_impl.h  kcore_impl.h  kcore_pred_impl.h  lcc_directed_impl.h  lcc_pred_impl.h  lcc_undirected_impl.h  leiden_impl.h  louvain_impl.h  page_rank_directed_impl.h  page_rank_pred_impl.h  page_rank_undirected_impl.h  sssp_impl.h  sssp_pred_impl.h  wcc_impl.h  wcc_pred_impl.h
extension/gds/include/utils/: option_utils.h  parallel_utils.h  path_utils.h  subgraph_utils.h
extension/gds/src/: bfs.cc  bfs_function.cpp  cdlp.cc  gds_algo_extension.cc  gds_extension.cpp  k_core_function.cpp  kcore.cc  label_propagation_function.cpp  lcc.cc  lcc_function.cpp  leiden.cc  leiden_function.cpp  louvain.cc  page_rank.cc  page_rank_function.cpp  project_graph_function.cpp  sssp.cc  sssp_function.cpp  wcc.cc  wcc_function.cpp
extension/gds/src/impl/: bfs_impl.cc  bfs_pred_impl.cc  cdlp_impl.cc  cdlp_pred_impl.cc  kcore_impl.cc  kcore_pred_impl.cc  lcc_directed_impl.cc  lcc_pred_impl.cc  lcc_undirected_impl.cc  leiden_impl.cc  louvain_impl.cc  page_rank_directed_impl.cc  page_rank_pred_impl.cc  page_rank_undirected_impl.cc  sssp_impl.cc  sssp_pred_impl.cc  wcc_impl.cc  wcc_pred_impl.cc
extension/gds/src/utils/: subgraph_utils.cc
extension/gds/tests/: gds_test.cpp
extension/httpfs/: CMakeLists.txt
extension/httpfs/include/: glob_utils.h  http_filesystem.h  http_options.h  s3_filesystem.h  s3_options.h
extension/httpfs/src/: http_filesystem.cc  s3_extension.cpp  s3_filesystem.cc  s3_options.cc
extension/httpfs/tests/: http_test.cpp  s3_test.cpp
extension/lif_sim/: CMakeLists.txt
extension/lif_sim/include/: lif_sim_engine.h  lif_sim_function.h  lif_sim_types.h
extension/lif_sim/src/: lif_sim_extension.cpp  lif_sim_function.cpp
extension/lif_sim/tests/: lif_sim_test.cpp
extension/pattern_matching/: CMakeLists.txt  README.md
extension/pattern_matching/include/: pattern_matching_data_graph_meta.h  pattern_matching_functions.h
extension/pattern_matching/include/fastest_lib/src/Base/: timer.h
extension/pattern_matching/include/fastest_lib/src/DataStructure/: graph.cpp  graph.h
extension/pattern_matching/include/fastest_lib/src/SpecialSubgraphs/: small_cycle.h
extension/pattern_matching/include/fastest_lib/src/SubgraphCounting/: candidate_graph_sampling.h  candidate_tree_sampling.h  cardinality_estimation.h  option.h
extension/pattern_matching/include/fastest_lib/src/SubgraphMatching/: candidate_space.h  data_graph.h  pattern_graph.h
extension/pattern_matching/src/: pattern_matching_data_graph_meta.cpp  pattern_matching_extension.cpp  pattern_matching_functions.cpp
extension/pattern_matching/tests/: pattern_matching_test.cpp
proto/: basic_type.proto  cypher_ddl.proto  expr.proto  physical.proto  response.proto
scripts/: build_and_upload_extensions.sh  install_deps.sh  pre_commit_check.sh  rename_wheels.sh
src/: CMakeLists.txt
tools/: CMakeLists.txt
tools/nodejs_bind/: CMakeLists.txt  Makefile  README.md  example.js  package-lock.json  package.json
tools/nodejs_bind/assets/: index.js  package.json
tools/nodejs_bind/lib/: async-connection.js  binding.js  connection.js  database.js  error-codes.js  format.js  index.js  query-result.js  utils.js  version.js
tools/nodejs_bind/lib/proto/: error_pb.js
tools/nodejs_bind/scripts/: generate_proto.js  validate_npm_version.py
tools/nodejs_bind/src/: neug_binding.cc  node_connection.cc  node_connection.h  node_database.cc  node_database.h  node_query_request.cc  node_query_request.h  node_query_result.cc  node_query_result.h
tools/nodejs_bind/tests/: test-shim.js  test_db_connection.js  test_db_init.js  test_db_transaction.js  test_query_result.js
tools/python_bind/: CMakeLists.txt  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
tools/python_bind/example/: complex_test.py  pattern_match_demo.py
tools/python_bind/neug/: __init__.py  database.py  neug_cli.py
tools/python_bind/neug/datasets/: io_utils.py
tools/python_bind/src/: neug_binding.cc  py_database.cc  py_database.h
tools/python_bind/tests/: bench_gds_path.py  conftest.py  test_alter_property.py  test_batch_loading.py  test_call_string_literal.py  test_data_io_docs.py  test_db_array.py  test_db_cases.py  test_db_concurrent.py  test_db_connection.py  test_db_import_export.py  test_db_init.py  test_db_list.py  test_db_query.py  test_db_transaction.py  test_ddl.py  test_export.py  test_gds.py  test_gds_concurrency.py  test_gds_path.py  test_gds_path_ldbc.py  test_gds_yield.py  test_graphalytics.py  test_java_driver.py  test_load.py  test_lsqb.py  test_merge.py  test_ngcli_basics.py  test_ngcli_commands.py  test_pattern_match.py  test_query.py  test_sniffer.py  test_tinysnb_tutorial.py  test_to_arrow.py  test_tp_service.py
tools/python_bind/tests/transaction/: elle_tester.py
tools/utils/: CMakeLists.txt
(+659 files in other folders)
