# Collect source files
file(GLOB GDS_EXTENSION_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/impl/*.cc"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/utils/*.cc")
set(GDS_EXTENSION_OBJECT_FILES ${GDS_EXTENSION_SOURCES})

# Use the extension build system (should be called before add_subdirectory(test))
build_extension_lib("gds")

# Set include directories
target_include_directories(neug_gds_extension PRIVATE
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_BINARY_DIR})

target_link_libraries(neug_gds_extension PRIVATE
    neug
    ${Protobuf_LIBRARIES}
)
